Fixed the styling of the Toolkit's sidebar icons and an issue with the collapse sidebar feature. (#1240)
* Fix styling for Toolkit navlink icons and refactor collapse sidebar

* Restyle nav items for a smoother feel when collapsing

--- a/src/extension/features/general/collapse-side-menu/index.css
+++ b/src/extension/features/general/collapse-side-menu/index.css
@@ -2,6 +2,14 @@
   cursor: pointer;
 }
 
+.ynabtk-collapse-link > span {
+  height: 2.25rem;
+  display: flex;
+  align-items: center;
+  margin-left: 1rem;
+  margin-right: .9rem;
+}
+
 .layout.collapsed .content,
 .layout.collapsed .budget-header {
 	left: 40px;
@@ -27,4 +35,14 @@
 
 .collapsed-buttons .active .collapsed-account {
 	color: #32dcff;
+}
+
+.ynabtk-nav-link-collapsed {
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
+}
+
+.nav-main > li > a {
+  display: -webkit-box;
+  width: 100%;
 }
